@@ -1597,6 +1597,33 @@ WIDGET_DEFAULT = {
         "column_index_system_clock": 1,
         "column_index_session_time": 2,
     },
+    "slip_ratio": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 280,
+        "position_y": 712,
+        "opacity": 0.9,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "enable_auto_font_offset": True,
+        "font_offset_vertical": 0,
+        "bar_padding_horizontal": 0.4,
+        "bar_padding_vertical": 0.3,
+        "bar_width": 50,
+        "bar_gap": 2,
+        "font_color": "#AAAAAA",
+        "optimal_slip_ratio_color": "#FFFFFF",
+        "critical_slip_ratio_color": "#FF00FF",
+        "bkg_color": "#222222",
+        "slip_ratio_optimal_range": 30,
+        "slip_ratio_max_range": 50,
+        "show_caption": False,
+        "font_scale_caption": 0.8,
+        "caption_text": "slip ratio",
+        "font_color_caption": "#CCCCCC",
+        "bkg_color_caption": "#777777",
+    },
     "speedometer": {
         "enable": True,
         "update_interval": 20,
